Fixed div.body overflow control
- Changed `height` property to `min-height`
+ Modified layout.html to be synced with main

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -29,7 +29,7 @@ div.head {
 }
 
 div.body {
-    height: calc(100% - var(--ribbon-height));
+    min-height: calc(100% - var(--ribbon-height));
     display: flex;
 }
 
@@ -133,7 +133,7 @@ div.panel-center {
     padding: 2.6rem;
     /* padding: 2.6rem 0 0 max(2.6rem, 15%); */
     width: 55%;
-    border: 1px solid black;
+    border: 1px dashed black;
 }
 
 div.panel-center div.panel-item {
